# python-devops

./: flake.nix  pyproject.toml
src/devops_teste/: __init__.py
src/python_devops/: __init__.py  __main__.py
