[project]
name = "python-devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "caio86", email = "caioluiz86@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python-devops = "python_devops:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
