[project]
name = "python-devops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "caio86", email = "caioluiz86@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
]

[project.scripts]
app = "python_devops.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "pyright>=1.1.394",
    "ruff>=0.9.7",
]
